# learningAI

./: .gitignore  .pylintrc  LICENSE.md  README.md  main.py  pyproject.toml
Barebones/: BatchGenerator.py  NaiveLRS.py  NaiveLinear.py  NaiveSequential.py  main.py
Regression/: Model.py  StatRegression.py  main.py
barebones/: __init__.py  aux.py  batch_generator.py  config.py  helper.py  main.py  optim.py  test.py  trainer.py
barebones/naive_layers/: __init__.py  abstract.py  activation.py  base.py  dropout.py  linear.py  naive_bn.py  naive_conv.py  naive_pool.py  sequential.py
barebones/naive_lrs/: __init__.py  abstract.py  cosine_annealing.py  exponential_decay.py  plateau_lrs.py  step_decay.py
barebones/weights/: best_model.pth
