[project]
name = "learningai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.8",
    "matplotlib>=3.10.6",
    "multipledispatch>=1.0.0",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pdoc>=16.0.0",
    "pylint>=4.0.3",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [{index = "pytorch-cuda"}]
torchvision = [{index = "pytorch-cuda"}]
